--- a/public/assets/css/alice.css
+++ b/public/assets/css/alice.css
@@ -26,7 +26,7 @@ h1, h2, h3 {
 }
 
 header {
-  background-image: url("../img/church_huge.jpg");
+  background-image: url("../img/church_huge.png");
   min-height: 370px;
 }
 
